# crud_files_operations

./: .gitignore  README.md  pyproject.toml
app/: crud.py  database.py  main.py  models.py  schemas.py  settings.py
app/routers/: media.py
