[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Aqeel Shahzad <aqeelshahzad1215@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
uvicorn = {extras = ["standard"], version = "^0.32.0"}
fastapi = {extras = ["standard"], version = "^0.115.3"}
psycopg = {extras = ["binary"], version = "^3.2.3"}
sqlmodel = "^0.0.22"
requests = "^2.32.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
